fp-library/tests/ui/multi_brand_unannotated.stderr
error[E0284]: type annotations needed
 --> tests/ui/multi_brand_unannotated.rs:9:10
  |
9 |     let _ = map(|x| x + 1, Ok::<i32, String>(5));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `Brand` declared on the function `map`
  |
  = note: cannot satisfy `<Result<i32, String> as InferableBrand_cdc7cd43dac7585f<'_, _, _>>::Marker == Val`

error[E0283]: type annotations needed
 --> tests/ui/multi_brand_unannotated.rs:9:25
  |
9 |     let _ = map(|x| x + 1, Ok::<i32, String>(5));
  |             ---            ^^^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `Brand` declared on the function `map`
  |             |
  |             required by a bound introduced by this call
  |
  = note: multiple `impl`s satisfying `Result<i32, String>: InferableBrand_cdc7cd43dac7585f<'_, _, _>` found in the `fp_library` crate:
          - impl<'a, A, E> InferableBrand_cdc7cd43dac7585f<'a, ResultErrAppliedBrand<E>, A> for Result<A, E>
            where A: 'a, E: 'static;
          - impl<'a, A, T> InferableBrand_cdc7cd43dac7585f<'a, ResultOkAppliedBrand<T>, A> for Result<T, A>
            where A: 'a, T: 'static;
note: required by a bound in `fp_library::functions::map`
 --> src/dispatch/functor.rs
  |
  |     pub fn map<'a, FA, A: 'a, B: 'a, Brand>(
  |            --- required by a bound in this function
...
  |         FA: InferableBrand_cdc7cd43dac7585f<'a, Brand, A>, {
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`
